<resources>
    <string name="app_name" translatable="false">Gold V2ray</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Configuration file</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_manually_vmess">Type manually[VMess]</string>
    <string name="menu_item_import_config_manually_vless">Type manually[VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Type manually[Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Type manually[SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Type manually[HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Type manually[Trojan]</string>
    <string name="menu_item_import_config_custom">Custom config</string>
    <string name="menu_item_import_config_custom_clipboard">Import custom config from Clipboard</string>
    <string name="menu_item_import_config_custom_local">Import custom config from Locally</string>
    <string name="menu_item_import_config_custom_url">Import custom config from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Import custom config scan URL</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="server_lab_remarks">Remarks</string>
    <string name="server_lab_address">Address</string>
    <string name="server_lab_port">Port</string>
    <string name="server_lab_id">Id</string>
    <string name="server_lab_alterid">Alter Id</string>
    <string name="server_lab_security">Security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">Head Type</string>
    <string name="server_lab_mode_type">GRPC mode</string>
    <string name="server_lab_request_host">Host</string>
    <string name="server_lab_request_host_http">HTTP host</string>
    <string name="server_lab_request_host_ws">WS host</string>
    <string name="server_lab_request_host_httpupgrade">HTTP upgrade host</string>
    <string name="server_lab_request_host_xhttp">XHTTP host</string>
    <string name="server_lab_request_host_h2">H2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">GRPC Authority</string>
    <string name="server_lab_path">Path</string>
    <string name="server_lab_path_ws">WS path</string>
    <string name="server_lab_path_httpupgrade">HTTP upgrade path</string>
    <string name="server_lab_path_xhttp">"XHTTP path "</string>
    <string name="server_lab_path_h2">H2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">KCP seed</string>
    <string name="server_lab_path_grpc">GRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint" translatable="false">Fingerprint</string>
    <string name="server_lab_stream_alpn" translatable="false">Alpn</string>
    <string name="server_lab_allow_insecure">Allow Insecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">Address</string>
    <string name="server_lab_port3">Port</string>
    <string name="server_lab_id3">Password</string>
    <string name="server_lab_security3">Security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">Encryption</string>
    <string name="server_lab_flow">Flow</string>
    <string name="server_lab_public_key" translatable="false">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id" translatable="false">ShortId</string>
    <string name="server_lab_spider_x" translatable="false">SpiderX</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a Config File</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize Config</string>
    <string name="toast_config_file_invalid">Invalid Config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_asset_copy_failed">File copy failed, please use File Manager</string>
    <string name="menu_item_add_file">Add files</string>
    <string name="menu_item_download_file">Download files</string>
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="menu_item_select_proxy_app">Auto select proxy app</string>
    <string name="msg_downloading_content">Downloading content</string>
    <string name="menu_item_export_proxy_app">Export to Clipboard</string>
    <string name="menu_item_import_proxy_app">Import from Clipboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">General: Checked apps use proxy, unchecked apps connect directly; \nBypass mode: checked apps connect directly, unchecked apps use proxy. \nThe option to automatically select proxy applications is in the menu</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="summary_title_pref_is_bootedpref_per_app_proxy">General: Checked App is proxy, unchecked direct connection; \nbypass mode: checked app directly connected, unchecked proxy. \nThe option to automatically select the proxy application in the menu</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Faster, but it may cause unstable connectivity\nCustomize how to handle TCP, UDP and QUIC below</string>
    <string name="title_pref_mux_concurency">TCP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_concurency">XUDP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string-array name="mux_xudp_quic_entries">
        <item>reject</item>
        <item>allow</item>
        <item>skip</item>
    </string-array>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="summary_pref_sniffing_enabled">Try sniff domain from the packet (default on)</string>
    <string name="title_pref_route_only_enabled">Enable routeOnly</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_logcat">Logcat</string>
    <string name="title_service_restart">Service restart</string>
    <string name="title_del_all_config">Delete all servers</string>
    <string name="title_del_duplicate_config">Delete duplicate servers</string>
    <string name="title_del_invalid_config">Delete invalid servers</string>
    <string name="title_export_all">Export all servers</string>
    <string name="title_sub_setting">Subscriptions setting</string>
    <string name="sub_setting_remarks">remarks</string>
    <string name="sub_setting_url">Optional URL</string>
    <string name="sub_setting_filter">Remarks regular filter</string>
    <string name="sub_setting_enable">Enable update</string>
    <string name="sub_auto_update">Enable automatic update</string>
    <string name="sub_setting_pre_profile">Previous proxy configuration remarks</string>
    <string name="sub_setting_next_profile">Next proxy configuration remarks</string>
    <string name="sub_setting_pre_profile_tip">The configuration remarks exists and is unique</string>
    <string name="title_sub_update">Update subscription</string>
    <string name="title_ping_all_server">Tcping all configuration</string>
    <string name="title_user_asset_setting">Geo asset files</string>
    <string name="title_sort_by_test_results">Sorting by test results</string>
    <string name="other_apps">Other Apps</string>
    <string name="about">About</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="share_lock">Lock servers</string>
    <string name="free_servers_update">Free servers update</string>
    <string name="testing_servers">Testing servers</string>
    <string name="menu_item_import_config_manually_wireguard">Type manually[Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Type manually[Hysteria2]</string>
    <string name="user_guides">User guides</string>
    <string name="menu_item_import_config_local">Import config from locally</string>
    <string name="sub_allow_insecure_url">Allow insecure HTTP address</string>
    <string name="title_create_intelligent_selection_all_server">Smart Connection</string>
    <string name="sub_setting_intelligent_selection_filter">Remarks Smart Connection filter</string>
    <string name="smart_test">Smart Test</string>
</resources>