<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main">
        <item
            android:id="@+id/user_asset_setting"
            android:icon="@drawable/ic_file_24dp"
            android:title="@string/title_user_asset_setting" />
        <item
            android:id="@+id/sub_setting"
            android:icon="@drawable/ic_subscriptions_24dp"
            android:title="@string/title_sub_setting" />
    </group>

    <group
        android:id="@+id/group_main2">
        <item
            android:id="@+id/share_lock"
            android:icon="@drawable/ic_share_lock"
            android:title="@string/share_lock" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/title_settings" />
    </group>

    <group android:id="@+id/group_id2">
        <!--<item
            android:id="@+id/promotion"
            android:icon="@drawable/ic_whatshot_24dp"
            android:title="@string/title_pref_promotion" />-->
        <item
            android:id="@+id/rate_app"
            android:icon="@drawable/ic_rate_app"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/share_app"
            android:icon="@drawable/ic_share_app"
            android:title="@string/share_app" />
        <item
            android:id="@+id/other_apps"
            android:icon="@drawable/ic_other_apps"
            android:title="@string/other_apps" />
        <item
            android:id="@+id/logcat"
            android:icon="@drawable/ic_logcat_24dp"
            android:title="@string/title_logcat" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_24dp"
            android:title="@string/title_pref_feedback" />
        <item
                android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/title_privacy_policy" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <!-- place holder for version text at the bottom -->
        <!--<item
            android:id="@+id/placeholder"
            android:enabled="false"
            android:title="" />-->
    </group>
</menu>